syntax = "proto3";
package microshopping;
option go_package = "./proto;microshopping";

//购物车消息
message CartItem {
    string product_id = 1;
    int32 quantity = 2;
}
message Empty{}

//地址
message Address{
    string street_address = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    int32 zip_code = 5;
}
//当前货币描述
message Money{
    string currency_code = 1;
    int64 units = 2;
    int32 nanos = 3;
}

//发送确认邮件接口
service EmailService{
    rpc SendOrderConfirmation(SendOrderConfirmationRequest)returns(Empty);
}

//订单项
message OrderItem{
    CartItem item = 1;
    Money cost = 2;
}
//订单结果
message OrderResult{
    string order_id = 1;
    string shipping_tracking_id = 2;
    Money shipping_cost =3;
    Address shipping_address = 4;
    repeated OrderItem items = 5;
}
//发送确认邮件请求
message SendOrderConfirmationRequest{
    string email = 1;
    OrderResult order = 2;
}